--- a/package.json
+++ b/package.json
@@ -5,18 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"ts-node  ./src/server.ts"
+    "start": "ts-node  ./scripts/start.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.7.5",
+    "chalk": "^1.0.0",
+    "cline": "^0.8.2",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "@types/lodash": "^4.14.182",
-    "lodash": "^4.17.21"
+    "async": "^3.2.4",
+    "lodash": "^4.17.21",
+    "optparse": "^1.0.5"
   }
 }
