--- a/desktop/package.json
+++ b/desktop/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "inline-worker": "^0.1.0",
+    "less": "^4.1.3",
     "vue": "^3.2.25",
     "vue-draggable-next": "^2.1.1"
   },
