--- a/desktop/tsconfig.json
+++ b/desktop/tsconfig.json
@@ -13,6 +13,6 @@
     "lib": ["esnext", "dom"],
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "electron-main/**/*.ts", "electron-preload/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "electron-main/**/*.ts", "electron-preload/**/*.ts", "src/libs/record/base.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
