--- a/desktop/package.json
+++ b/desktop/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "inline-worker": "^0.1.0",
+    "js-audio-recorder": "^1.0.7",
     "less": "^4.1.3",
     "vue": "^3.2.25",
     "vue-draggable-next": "^2.1.1"
